# Lecture8-Exercise-DevOps-CPS

./: README.md  docker-compose.yml  px4-sitl.Dockerfile
config/: gz_ros_bridge.yaml
ros2_ws/src/perception_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/perception_msgs/msg/: Detection.msg  DetectionArray.msg
ros2_ws/src/perception_yolo/: package.xml  setup.py
ros2_ws/src/perception_yolo/perception_yolo/: yolo_node.py
worlds/: perception.sdf
